# Source/CodeGen/v1/Rust/VitalServiceApiClient/src/apis/settings_api.rs
@@ -15,6 +15,13 @@ use crate::apis::ResponseContent;
 use super::{Error, configuration};
 
 
+/// struct for typed errors of method [`api_settings_dont_use_get`]
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum ApiSettingsDontUseGetError {
+    UnknownValue(serde_json::Value),
+}
+
 /// struct for typed errors of method [`api_settings_get`]
 #[derive(Debug, Clone, Serialize, Deserialize)]
 #[serde(untagged)]
@@ -29,6 +36,33 @@ pub enum ApiSettingsSetRunAtStartupPutError {
     UnknownValue(serde_json::Value),
 }
 
+
+pub async fn api_settings_dont_use_get(configuration: &configuration::Configuration, ) -> Result<crate::models::ClientSettings, Error<ApiSettingsDontUseGetError>> {
+    let local_var_configuration = configuration;
+
+    let local_var_client = &local_var_configuration.client;
+
+    let local_var_uri_str = format!("{}/api/Settings/DontUse", local_var_configuration.base_path);
+    let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
+
+    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
+        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+    }
+
+    let local_var_req = local_var_req_builder.build()?;
+    let local_var_resp = local_var_client.execute(local_var_req).await?;
+
+    let local_var_status = local_var_resp.status();
+    let local_var_content = local_var_resp.text().await?;
+
+    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
+        serde_json::from_str(&local_var_content).map_err(Error::from)
+    } else {
+        let local_var_entity: Option<ApiSettingsDontUseGetError> = serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        Err(Error::ResponseError(local_var_error))
+    }
+}
 
 pub async fn api_settings_get(configuration: &configuration::Configuration, ) -> Result<crate::models::SettingsDto, Error<ApiSettingsGetError>> {
     let local_var_configuration = configuration;
