# Source/CodeGen/v1/Rust/VitalServiceApiClient/src/models/managed_model.rs
@@ -1,0 +1,49 @@
+/*
+ * VitalService
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct ManagedModel {
+    #[serde(rename = "id", skip_serializing_if = "Option::is_none")]
+    pub id: Option<i32>,
+    #[serde(rename = "processName", skip_serializing_if = "Option::is_none")]
+    pub process_name: Option<String>,
+    #[serde(rename = "executionPath", skip_serializing_if = "Option::is_none")]
+    pub execution_path: Option<String>,
+    #[serde(rename = "alias", skip_serializing_if = "Option::is_none")]
+    pub alias: Option<String>,
+    #[serde(rename = "processPriority", skip_serializing_if = "Option::is_none")]
+    pub process_priority: Option<crate::models::ProcessPriorityEnum>,
+    #[serde(rename = "affinityBinary", skip_serializing_if = "Option::is_none")]
+    pub affinity_binary: Option<String>,
+    #[serde(rename = "parentProfileId", skip_serializing_if = "Option::is_none")]
+    pub parent_profile_id: Option<i32>,
+    #[serde(rename = "profileModel", skip_serializing_if = "Option::is_none")]
+    pub profile_model: Option<Box<crate::models::ProfileModel>>,
+}
+
+impl ManagedModel {
+    pub fn new() -> ManagedModel {
+        ManagedModel {
+            id: None,
+            process_name: None,
+            execution_path: None,
+            alias: None,
+            process_priority: None,
+            affinity_binary: None,
+            parent_profile_id: None,
+            profile_model: None,
+        }
+    }
+}
+
+
