# Source/temp/Swagger/v1/swagger.json
@@ -206,6 +206,29 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       }
@@ -229,6 +252,29 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       }
@@ -295,7 +341,24 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProfileModel"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProfileModel"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProfileModel"
+                }
+              }
+            }
           }
         }
       },
@@ -365,6 +428,29 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       },
@@ -386,6 +472,29 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       }
@@ -417,6 +526,29 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       },
@@ -446,6 +578,29 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       }
@@ -469,6 +624,29 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
           }
         }
       }
@@ -521,6 +699,36 @@
             "description": "Success"
           }
         }
+      }
+    },
+    "/api/Settings/DontUse": {
+      "get": {
+        "tags": [
+          "Settings"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ClientSettings"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ClientSettings"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ClientSettings"
+                }
+              }
+            }
+          }
+        },
+        "deprecated": true
       }
     },
     "/api/System/static": {
@@ -628,18 +836,6 @@
           }
         }
       }
-    },
-    "/api/System": {
-      "patch": {
-        "tags": [
-          "System"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
     }
   },
   "components": {
@@ -673,6 +869,15 @@
           "profileId": {
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ClientSettings": {
+        "type": "object",
+        "properties": {
+          "alwaysOnTop": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -1272,14 +1477,16 @@
         "additionalProperties": false
       },
       "GetManagedResponse": {
+        "required": [
+          "affinityModels"
+        ],
         "type": "object",
         "properties": {
           "affinityModels": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/ManagedModelDto"
-            },
-            "nullable": true
+            }
           }
         },
         "additionalProperties": false
@@ -1454,6 +1661,12 @@
         "additionalProperties": false
       },
       "InfluxDbSettings": {
+        "required": [
+          "enabled",
+          "endPoint",
+          "reportIntervalSeconds",
+          "token"
+        ],
         "type": "object",
         "properties": {
           "enabled": {
@@ -1464,17 +1677,19 @@
             "format": "int32"
           },
           "endPoint": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           },
           "token": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           }
         },
         "additionalProperties": false
       },
       "LaunchSettings": {
+        "required": [
+          "vitalServiceHttpPort",
+          "vitalServiceHttpsPort"
+        ],
         "type": "object",
         "properties": {
           "vitalServiceHttpsPort": {
@@ -1565,6 +1780,42 @@
         },
         "additionalProperties": false
       },
+      "ManagedModel": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "processName": {
+            "type": "string",
+            "nullable": true
+          },
+          "executionPath": {
+            "type": "string",
+            "nullable": true
+          },
+          "alias": {
+            "type": "string",
+            "nullable": true
+          },
+          "processPriority": {
+            "$ref": "#/components/schemas/ProcessPriorityEnum"
+          },
+          "affinityBinary": {
+            "type": "string",
+            "nullable": true
+          },
+          "parentProfileId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "profileModel": {
+            "$ref": "#/components/schemas/ProfileModel"
+          }
+        },
+        "additionalProperties": false
+      },
       "ManagedModelDto": {
         "type": "object",
         "properties": {
@@ -1629,6 +1880,9 @@
         "additionalProperties": false
       },
       "MetricsSettings": {
+        "required": [
+          "persistMetrics"
+        ],
         "type": "object",
         "properties": {
           "persistMetrics": {
@@ -2002,6 +2256,35 @@
             "type": "boolean"
           },
           "active": {
+            "type": "boolean"
+          },
+          "priority": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ProfileModel": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "managedModels": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ManagedModel"
+            },
+            "nullable": true
+          },
+          "enabled": {
             "type": "boolean"
           },
           "priority": {
